fix: app overflow

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -15,7 +15,7 @@
     padding-right: 10px;
     padding-top: 2px;
     margin-bottom: 10px;
-    
+    box-sizing: border-box;
 
     user-select: none;
     
